{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 116,
  "lineage": "2aa41c52-162e-4f8c-410d-339884801fb5",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "server_existent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-085284d24fe829cd0",
            "arn": "arn:aws:ec2:us-west-1:961518039473:instance/i-00b1876990e52aae9",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1c",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "image-id",
                "values": [
                  "ami-085284d24fe829cd0"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "API-Instance-CL"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-00b1876990e52aae9",
            "instance_id": "i-00b1876990e52aae9",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "key_name": "API-key-CL",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0b598efef6011a3bb",
            "placement_partition_number": 0,
            "private_dns": "ip-10-1-90-138.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.90.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "API-Instance-CL",
                  "project": "ramp-up-devops",
                  "responsible": "camilo.loaizaf"
                },
                "throughput": 0,
                "volume_id": "vol-0f2161db256ff51f7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-038fa9d9a69d6561e",
            "tags": {
              "Name": "API-Instance-CL",
              "project": "ramp-up-devops",
              "responsible": "camilo.loaizaf"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09be545ad4a6767c8"
            ]
          }
        }
      ]
    },
    {
      "module": "module.SG_AUTH-API",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:security-group/sg-07fc091f33cd088ba",
            "description": "Security Group AUTH-API",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07fc091f33cd088ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "SG-AUTH-API-RAMPUP-LJH",
            "name_prefix": "",
            "owner_id": "961518039473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-AUTH-API-RAMPUP-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tags_all": {
              "Name": "SG-AUTH-API-RAMPUP-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2831659ef89870c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.SG_FRONTEND",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:security-group/sg-04faec13a31f626bc",
            "description": "Security Group FRONTEND",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04faec13a31f626bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "SG-FRONTEND-RAMPUP-LJH",
            "name_prefix": "",
            "owner_id": "961518039473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-FRONTEND-RAMPUP-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tags_all": {
              "Name": "SG-FRONTEND-RAMPUP-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2831659ef89870c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.SG_JENKINS",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:security-group/sg-06a736403c8f73e3b",
            "description": "Security Group JENKINS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a736403c8f73e3b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "SG-JENKINS-RAMPUP-LJH",
            "name_prefix": "",
            "owner_id": "961518039473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-JENKINS-RAMPUP-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tags_all": {
              "Name": "SG-JENKINS-RAMPUP-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2831659ef89870c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.SG_LOG-MESSAGE-PROCESSOR",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:security-group/sg-0d173bde582b6f4f2",
            "description": "Security Group LOG-MESSAGE-PROCESSOR",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d173bde582b6f4f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "SG-LOG-MESSAGE-PROCESSOR-RAMPUP-LJH",
            "name_prefix": "",
            "owner_id": "961518039473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-LOG-MESSAGE-PROCESSOR-RAMPUP-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tags_all": {
              "Name": "SG-LOG-MESSAGE-PROCESSOR-RAMPUP-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2831659ef89870c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.SG_REDIS-DB",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:security-group/sg-0c06b2dbce39bb50e",
            "description": "Security Group REDIS-DB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c06b2dbce39bb50e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "SG-REDIS-DB-RAMPUP-LJH",
            "name_prefix": "",
            "owner_id": "961518039473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-REDIS-DB-RAMPUP-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tags_all": {
              "Name": "SG-REDIS-DB-RAMPUP-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2831659ef89870c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.SG_SSH-22",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:security-group/sg-0a26a1dd1fe35271e",
            "description": "Security Group SSH-22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a26a1dd1fe35271e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG-SSH-22-RAMPUP-LJH",
            "name_prefix": "",
            "owner_id": "961518039473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-SSH-22-RAMPUP-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tags_all": {
              "Name": "SG-SSH-22-RAMPUP-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2831659ef89870c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.SG_TODOS-API",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:security-group/sg-0ebff973c76e11b82",
            "description": "Security Group TODOS-API",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ebff973c76e11b82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              }
            ],
            "name": "SG-TODOS-API-RAMPUP-LJH",
            "name_prefix": "",
            "owner_id": "961518039473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-TODOS-API-RAMPUP-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tags_all": {
              "Name": "SG-TODOS-API-RAMPUP-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2831659ef89870c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.SG_USERS-API",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961518039473:security-group/sg-0d81a32097f5133f8",
            "description": "Security Group USERS-API",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d81a32097f5133f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              }
            ],
            "name": "SG-USERS-API-RAMPUP-LJH",
            "name_prefix": "",
            "owner_id": "961518039473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-USERS-API-RAMPUP-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tags_all": {
              "Name": "SG-USERS-API-RAMPUP-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2831659ef89870c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.instances_AUTH-API",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cbd40f694b804622",
            "arn": "arn:aws:ec2:us-west-1:961518039473:instance/i-0c3192488bebab82b",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c3192488bebab82b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KP-RampUp-LJH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bbf79c8a56e5fa84",
            "private_dns": "ip-10-1-7-193.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.7.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00becc1801991f99d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0088df5de3a4fe490",
            "tags": {
              "Name": "EC2-Rampup-AUTH-API-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tags_all": {
              "Name": "EC2-Rampup-AUTH-API-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "EC2-Rampup-AUTH-API-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "vpc_security_group_ids": [
              "sg-07fc091f33cd088ba",
              "sg-0a26a1dd1fe35271e"
            ]
          },
          "dependencies": [
            "module.SG_AUTH-API.aws_security_group.server_sg",
            "module.SG_SSH-22.aws_security_group.server_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instances_FRONTEND",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cbd40f694b804622",
            "arn": "arn:aws:ec2:us-west-1:961518039473:instance/i-0f1d8822dc4b1c797",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f1d8822dc4b1c797",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KP-RampUp-LJH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e8007c513fb10db4",
            "private_dns": "ip-10-1-1-133.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fe878540f9fe282c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0088df5de3a4fe490",
            "tags": {
              "Name": "EC2-Rampup-FRONTEND-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tags_all": {
              "Name": "EC2-Rampup-FRONTEND-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "EC2-Rampup-FRONTEND-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "vpc_security_group_ids": [
              "sg-04faec13a31f626bc",
              "sg-0a26a1dd1fe35271e"
            ]
          },
          "dependencies": [
            "module.SG_FRONTEND.aws_security_group.server_sg",
            "module.SG_SSH-22.aws_security_group.server_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instances_JENKINS",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cbd40f694b804622",
            "arn": "arn:aws:ec2:us-west-1:961518039473:instance/i-0ffc85efecfa17490",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ffc85efecfa17490",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "KP-RampUp-LJH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0606a97f6cb11b67d",
            "private_dns": "ip-10-1-7-173.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.7.173",
            "public_dns": "ec2-18-144-49-85.us-west-1.compute.amazonaws.com",
            "public_ip": "18.144.49.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0595ca80165c7fc71",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0088df5de3a4fe490",
            "tags": {
              "Name": "EC2-Rampup-JENKINS-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tags_all": {
              "Name": "EC2-Rampup-JENKINS-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "EC2-Rampup-JENKINS-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "vpc_security_group_ids": [
              "sg-06a736403c8f73e3b",
              "sg-0a26a1dd1fe35271e"
            ]
          },
          "dependencies": [
            "module.SG_JENKINS.aws_security_group.server_sg",
            "module.SG_SSH-22.aws_security_group.server_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instances_LJH-DB2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cbd40f694b804622",
            "arn": "arn:aws:ec2:us-west-1:961518039473:instance/i-04f3c731e416f9464",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f3c731e416f9464",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KP-RampUp-LJH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fd4b16c81c8c8af1",
            "private_dns": "ip-10-1-0-37.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.37",
            "public_dns": "ec2-54-177-213-71.us-west-1.compute.amazonaws.com",
            "public_ip": "54.177.213.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0913061db0e531bd1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0088df5de3a4fe490",
            "tags": {
              "Name": "EC2-Rampup-LJH-DB2-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tags_all": {
              "Name": "EC2-Rampup-LJH-DB2-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "EC2-Rampup-LJH-DB2-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "vpc_security_group_ids": [
              "sg-0a26a1dd1fe35271e",
              "sg-0c06b2dbce39bb50e"
            ]
          },
          "dependencies": [
            "module.SG_REDIS-DB.aws_security_group.server_sg",
            "module.SG_SSH-22.aws_security_group.server_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instances_LOG-MESSAGE-PROCESSOR",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cbd40f694b804622",
            "arn": "arn:aws:ec2:us-west-1:961518039473:instance/i-05904b8d2af0340b8",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05904b8d2af0340b8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KP-RampUp-LJH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b25d09e40b3872a8",
            "private_dns": "ip-10-1-3-29.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02ddbba013ef4c992",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0088df5de3a4fe490",
            "tags": {
              "Name": "EC2-Rampup-LOG-MESSAGE-PROCESSOR-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tags_all": {
              "Name": "EC2-Rampup-LOG-MESSAGE-PROCESSOR-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "EC2-Rampup-LOG-MESSAGE-PROCESSOR-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "vpc_security_group_ids": [
              "sg-0a26a1dd1fe35271e",
              "sg-0d173bde582b6f4f2"
            ]
          },
          "dependencies": [
            "module.SG_LOG-MESSAGE-PROCESSOR.aws_security_group.server_sg",
            "module.SG_SSH-22.aws_security_group.server_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instances_REDIS-DB",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cbd40f694b804622",
            "arn": "arn:aws:ec2:us-west-1:961518039473:instance/i-0688878f83d17cbe7",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0688878f83d17cbe7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KP-RampUp-LJH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0235db586f0c4713c",
            "private_dns": "ip-10-1-4-44.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.4.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01f68068c6553d134",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0088df5de3a4fe490",
            "tags": {
              "Name": "EC2-Rampup-REDIS-DB-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tags_all": {
              "Name": "EC2-Rampup-REDIS-DB-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "EC2-Rampup-REDIS-DB-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "vpc_security_group_ids": [
              "sg-0a26a1dd1fe35271e",
              "sg-0c06b2dbce39bb50e"
            ]
          },
          "dependencies": [
            "module.SG_REDIS-DB.aws_security_group.server_sg",
            "module.SG_SSH-22.aws_security_group.server_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instances_TODOS-API",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cbd40f694b804622",
            "arn": "arn:aws:ec2:us-west-1:961518039473:instance/i-01b6f1694530773f0",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b6f1694530773f0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KP-RampUp-LJH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00b693d03c55a4e48",
            "private_dns": "ip-10-1-6-210.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.6.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-023361e2eeadbad07",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0088df5de3a4fe490",
            "tags": {
              "Name": "EC2-Rampup-TODOS-API-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tags_all": {
              "Name": "EC2-Rampup-TODOS-API-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "EC2-Rampup-TODOS-API-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "vpc_security_group_ids": [
              "sg-0a26a1dd1fe35271e",
              "sg-0ebff973c76e11b82"
            ]
          },
          "dependencies": [
            "module.SG_SSH-22.aws_security_group.server_sg",
            "module.SG_TODOS-API.aws_security_group.server_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instances_USERS-API",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cbd40f694b804622",
            "arn": "arn:aws:ec2:us-west-1:961518039473:instance/i-02a9e590f24bcc1b8",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a9e590f24bcc1b8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KP-RampUp-LJH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0891c93d02a3ec693",
            "private_dns": "ip-10-1-2-186.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a215c38f0977d248",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0088df5de3a4fe490",
            "tags": {
              "Name": "EC2-Rampup-USERS-API-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tags_all": {
              "Name": "EC2-Rampup-USERS-API-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "EC2-Rampup-USERS-API-LJH",
              "project": "ramp-up-devops",
              "responsible": "leandro.hinestroza"
            },
            "vpc_security_group_ids": [
              "sg-0a26a1dd1fe35271e",
              "sg-0d81a32097f5133f8"
            ]
          },
          "dependencies": [
            "module.SG_SSH-22.aws_security_group.server_sg",
            "module.SG_USERS-API.aws_security_group.server_sg"
          ]
        }
      ]
    }
  ]
}